--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,11 @@
 
     <!--Форму размещай тут-->
 
+    <form action="/pets/orders" method="POST">
+        <input type="submit" value="ОТПРАВЛЯЙТЕ">
+
+    </form>
+
 </main>
 </body>
 </html>
